# novasql

./: .dockerignore  .gitignore  .golangci.yml  Cargo.toml  Dockerfile  Makefile  README.md  database.go  database_index.go  docs.go  go.mod  go.sum  index_registry.go  novasql.yaml  run-img.sh  test_2.go  types.go
basedir/tables/: users
cmd/client/: main.go
cmd/client_native/: main.go
cmd/server/: main.go  server.go
data/: metadata  segment_0
internal/: config.go  database.go
internal/alias/: README.md
internal/btree/: capacity.go  drop.go  entry.go  entry_test.go  errors.go  index.go  internal.go  leaf.go  leaf_test.go  meta.go  tree.go  tree_test.go
internal/bufferpool/: global_pool.go  interfaces.go  pool.go  pool_test.go  replacer_clock_adapter.go  replacer_clock_adapter_test.go  view.go
internal/catalog/: model.go
internal/engine/: db.go
internal/heap/: heap_page.go  heap_page_test.go  table.go  table_test.go  tid.go
internal/lock/: refcount.go
internal/novasql/: db.go
internal/record/: rowcodec.go  rowcodec_test.go  schema.go
internal/storage/: btree.go  buffer_manager.go  common.go  consts.go  engine.go  factory.go  overflow.go  overflow_test.go  page.go  page_debug.go  page_test.go  pager.go  rowcodec.go  segments.go  sm.go  sm_test.go  storage.go  test_page.go  vars.go  wal_writer_adapter.go
internal/wal/: manager.go
manual_test/database/: main.go
manual_test/page/: crud.go  (+1 more)
pkg/: database.go
sqlclient/: client.go
src/: config.rs  database.rs  lib.rs  main.rs  page.rs
testing_files/: demo_file.go  test_2.go  testfile.go
(+56 files in other folders)
