[package]
name = "novasql"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
bytes = "1.9.0"
indexmap = "2.7.0"
memmap2 = "0.9.5"
parking_lot = "0.12.3"
raft-rs = "0.1.0"
rayon = "1.10.0"
regex = "1.11.1"
serde = "1.0.217"
serde_json = "1.0.134"
sled = "0.34.7"
sqlparser = "0.53.0"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["full"] }
uuid = "1.11.0"

[dev-dependencies]
criterion = "0.5.1"
proptest = "1.6.0"
